# pirates-creek

./: .gitignore  README.md  cda_bookmarks.html  constantly_changing  constantly_changing.rtf  flask_App.py  search_engine_notes
.qt_for_python/uic/: uiv1.py
pirate-creek/: package-lock.json  package.json
src/: flask_App.py  main.py  main_gui.py  uiv1.ui
src/creek_pirate/: main.py  pyproject.toml
src/creek_pirate/Website/templates/: flask_App.py
src/creek_pirate/Website/templates/static/: style.css
src/creek_pirate/Website/templates/template/: searchres.html  website.html
src/creek_pirate/creek_pirate/: main.py
src/creek_pirate/creek_pirate/Website/templates/: basic_calculator.py  flask_App.py  main.py
src/creek_pirate/creek_pirate/Website/templates/static/: settings_style.css  style.css
src/creek_pirate/creek_pirate/Website/templates/template/: settings.html  website.html
src/creek_pirate/creek_pirate/Website/templates/urlTamperable/DirectSites/: crackhubScene_Filter.py  crackhub_Filter.py  gloadFilter.py  gogGamesFilter.py  macbed_Filter.py  myabandonwareFilter.py  oldgamesdownloadFilter.py  onlineFix_Filter.py  ovagamesFilter.py  rslb_Filter.py  scooter_Filter.py
src/creek_pirate/creek_pirate/Website/templates/urlTamperable/Repacks/: chovkaRepackFilter.py  gnarlyFilter.py
src/creek_pirate/creek_pirate/urlTamperable/DirectSites/: crackhub_Filter.py
src/creek_pirate/urlTamperable/DirectSites/: csrinruFilter.py  gloadFilter.py  gogGamesFilter.py  ovagamesFilter.py
src/creek_pirate/urlTamperable/Repacks/: fitgirlRepackFilter.py
(+31 files in other folders)
